GRAMMAR.ebnf
identifier = ? html tag name or css class name ? ; 

text = { ? any character ? } ;

outline-block = "[" , attributes , [ ";" , body ] ,"]" ;

inline-block = "<" , attributes , [ ";" , para ] , ">" ;

attributes = [ [ "!" , identifier | identifier ] , { "." , identifier } ] ;

body = [ body-item , { "\n" , body-item } ] ;

body-item = 
         para
       | outline-block  
       | section-break 
       ;

section-break =
         "===" , { "=" }
       | "---" , { "-" } 
       | "<<<" , { "<" }
       | ">>>" , { ">" }
       ;

para = narration , [ "=" , dialog , { "=" , narration } ] ;
dialog = { text | para-item } ;
narration = { text | para-item } ;

para-item = 
         inline-block
       | "***" , para, "***"
       | "**" , para, "**"
       | "*" , para, "*"
       | "_" , para, "_"
       | "~" , para, "~"
       | "$" , para, "$"
       ;

file = outline-block ;
